#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psana
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag:V00-13-01
2015-4-9 Christopher O'Grady
- use env variable SIT_PSDM_DATA to determine default calib-dir,
  but default to /reg/d/psdm in env variable doesn't exist.
	
Tag:V00-13-00
2015-4-7 David Schneider
- remove strong dependency on root JIRA issue PSAS-131.
- completely deprecate the roothistomanager, users must use the pshist manager
	
Tag: V00-12-11
2015-3-3 David Schneider
- small data JIRA issue PSAS-85
- add smalldata type to PSAna file types. 
- check for more than one input source in dataset
- add smalldata file type to PSXtcInput.XtcInput modue
- note - small data not supported for parallel mode

Tag: V00-12-10
2015-01-09 David Schneider
- improve diagnostic about modules loaded.
- related to Jira issue PSAS-86	
	
Tag: V00-12-09
2014-09-24 Christopher O'Grady
- eliminate warning message about invalid experiment number, which
  is not valid for shmem running.

Tag: V00-12-08
2014-09-11 Mikhail Dubrovin
- in EventKeys add flag-pars to print in event() info about env.configStore().keys() and env.calibStore().keys()

Tag: V00-12-07
2014-08-27 David Schneider
- Changes to make it easier to write a C++ driver program - see comments  
  in Jira PSAS-15 - specifically:
- add method nextWithEvent to StepIter and RunIter that returns
  same event that psana modules get in BeginCalibCycle and BeginRun
- refactor PSAnaApp runApp. Add new methods setConfigFileAndOptions 
  and inputDataSets for a C++ driver.

Tag: V00-12-06
2014-08-20 Christopher O'Grady
- Add ability to get EventTime's for a user-selectable calib cycle

Tag: V00-12-05
2014-07-18 Christopher O'Grady